<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/mid_view_padding">

	<TextView
		android:id="@+id/quiz_dialog_info_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:gravity="center"
		android:padding="@dimen/mid_view_padding"
		android:text="@string/quiz_dialog_info_title"
		android:textColor="@color/colorWhite"
		android:textSize="@dimen/dialog_title"/>

	<TextView
		android:id="@+id/tv_quiz_dialog_info_score"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="@dimen/mid_view_padding"
		android:textColor="@color/colorSecondaryText"
		android:textSize="@dimen/dialog_description"
		tools:text="@string/quiz_dialog_score"/>

	<TextView
		android:id="@+id/tv_quiz_dialog_info_profit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:drawableEnd="@drawable/ic_coin_small"
		android:drawablePadding="@dimen/tiny_layout_margin"
		android:gravity="center"
		android:padding="@dimen/mid_view_padding"
		android:textColor="@color/colorSecondaryText"
		android:textSize="@dimen/dialog_description"
		tools:text="@string/quiz_dialog_earned"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginEnd="@dimen/layout_margin"
		android:layout_marginStart="@dimen/layout_margin"
		android:background="@color/colorDivider"/>

	<Button
		android:id="@+id/btn_quiz_dialog_ok"
		style="@style/AppTheme.BorderlessButtonEnabled"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/layout_margin"
		android:text="@string/quiz_dialog_btn_positive"
		android:textSize="@dimen/default_text_size"/>

</LinearLayout>